overflow of  syntax error fixed

--- a/SimpleCalcJS/style.css
+++ b/SimpleCalcJS/style.css
@@ -62,7 +62,7 @@ html{
     height: 60px;
     color: #FFF;
 
-    font-size: 2.7em;
+    font-size: 2.1em;
     font-weight: bold;
     
     overflow: hidden;
